--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
   "compilerOptions": {
     "preserveConstEnums": true,
-    "strictNullChecks": true,
-    "sourceMap": true,
+    "strictNullChecks": false,
+    "sourceMap": false,
     "allowJs": true,
-    "target": "es2017",
+    "target": "es2021",
     "outDir": ".build",
     "moduleResolution": "node",
-    "lib": ["es2017"],
+    "lib": ["es2021"],
     "rootDir": "./",
-    "strict": true,
     "module": "commonjs",
     "experimentalDecorators": true,
     "esModuleInterop": true,
