--- a/serverless.yml
+++ b/serverless.yml
@@ -25,6 +25,7 @@ provider:
   runtime: nodejs16.x
   lambdaHashingVersion: 20201221
   memorySize: 256
+  region: us-east-1
 
 # you can overwrite defaults here
 #  stage: dev
