--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: ts-serverless-openapi
+service: ts-serverless-openapi-swapi
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
